--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
 
 <div class="bottom-controls">
     <button class="circle-btn" onclick="document.getElementById('settings-window').style.display='flex'">⚙️</button>
-    <button class="circle-btn" id="btn-ai" onclick="alert('Interface da IA em desenvolvimento...')">🤖</button>
+    <button class="circle-btn" id="btn-ai" onclick="location.href='ia.html'">🤖</button>
 </div>
+
 
 <div id="sky-window" class="modal" style="width: 280px;">
     <h3 style="margin:0 0 10px 0; font-size: 14px;">Configurações do Céu</h3>
