--- a/ia.html
+++ b/ia.html
@@ -214,6 +214,10 @@
 </script>
 </body>
 </html>
+(); });
+</script>
+</body>
+</html>
 ex';
         } else {
             alert("Acesso negado.");
